--- a/savvyvan/proj/webapp/config.json
+++ b/savvyvan/proj/webapp/config.json
@@ -37,6 +37,7 @@
         "lighten-3",
         "lighten-2",
         "lighten-1",
+        "default",
         "darken-1",
         "darken-3",
         "darken-2",
@@ -47,6 +48,7 @@
         "lighten-3",
         "lighten-2",
         "lighten-1",
+        "default",
         "darken-1",
         "darken-2",
         "darken-3",
@@ -146,16 +148,16 @@
     ],
     "tile_bg_class": "teal",
     "battery_tile_display_status": "False",
-    "tile_shade_1": "lighten-1",
-    "tile_shade_2": "darken-3",
+    "tile_shade_1": "default",
+    "tile_shade_2": "default",
     "background_color": {
         "base_class": "teal",
-        "shade1_class": "lighten-1",
-        "shade2_class": "darken-3"
+        "shade1_class": "default",
+        "shade2_class": "default"
     },
     "total_title_to_display": 4,
     "geo_location_city": "LEEDS",
-    "weather_data": "{\"coord\": {\"lon\": -1.5477, \"lat\": 53.7964}, \"weather\": [{\"id\": 701, \"main\": \"Mist\", \"description\": \"mist\", \"icon\": \"50d\"}], \"base\": \"stations\", \"main\": {\"temp\": 3.96, \"feels_like\": 3.96, \"temp_min\": 3.25, \"temp_max\": 7.39, \"pressure\": 1023, \"humidity\": 90}, \"visibility\": 2500, \"wind\": {\"speed\": 0.51, \"deg\": 0}, \"clouds\": {\"all\": 40}, \"dt\": 1647852834, \"sys\": {\"type\": 2, \"id\": 2041378, \"country\": \"GB\", \"sunrise\": 1647842795, \"sunset\": 1647886812}, \"timezone\": 0, \"id\": 3333164, \"name\": \"Leeds\", \"cod\": 200}",
+    "weather_data": "{\"coord\": {\"lon\": -1.5477, \"lat\": 53.7964}, \"weather\": [{\"id\": 802, \"main\": \"Clouds\", \"description\": \"scattered clouds\", \"icon\": \"03d\"}], \"base\": \"stations\", \"main\": {\"temp\": 15.36, \"feels_like\": 14.13, \"temp_min\": 13.86, \"temp_max\": 17.27, \"pressure\": 1012, \"humidity\": 45}, \"visibility\": 10000, \"wind\": {\"speed\": 8.23, \"deg\": 280}, \"clouds\": {\"all\": 40}, \"dt\": 1652367980, \"sys\": {\"type\": 2, \"id\": 2041378, \"country\": \"GB\", \"sunrise\": 1652328581, \"sunset\": 1652385330}, \"timezone\": 3600, \"id\": 3333164, \"name\": \"Leeds\", \"cod\": 200}",
     "weather_widget_display_status": "False",
     "tiles": [
         {
@@ -184,7 +186,7 @@
             "tile_name": "",
             "tile_icon": "begin_config.png",
             "tile_file_mapping": "RelayGPIO100.py",
-            "is_active_tile": 1
+            "is_active_tile": 0
         },
         {
             "tile_id": "tile_5",
