Revert "Revert "Merge branch 'development' of https://github.com/bankmil/ControlPanel_lite into development""
This reverts commit 4212d15139e121acb7e2d369b1962a68530d8f5c.

--- a/savvyvan/proj/webapp/config.json
+++ b/savvyvan/proj/webapp/config.json
@@ -174,16 +174,16 @@
         "shade2_class": "darken-3"
     },
     "total_title_to_display": 4,
-    "geo_location_city": "London",
-    "weather_data": "",
-    "weather_widget_display_status": "True",
+    "geo_location_city": "LEEDS",
+    "weather_data": "{\"cod\": 401, \"message\": \"Invalid API key. Please see http://openweathermap.org/faq#error401 for more info.\"}",
+    "weather_widget_display_status": "False",
     "tiles": [
         {
             "tile_id": "tile_1",
             "tile_name": "",
             "tile_icon": "Profile_transparent_small.png",
             "tile_file_mapping": "RelayGPIO25.py",
-            "is_active_tile": 1
+            "is_active_tile": 0
         },
         {
             "tile_id": "tile_2",
@@ -204,7 +204,7 @@
             "tile_name": "",
             "tile_icon": "begin_config.png",
             "tile_file_mapping": "RelayGPIO100.py",
-            "is_active_tile": 1
+            "is_active_tile": 0
         },
         {
             "tile_id": "tile_5",
@@ -218,14 +218,14 @@
             "tile_name": "USB",
             "tile_icon": "usb.svg",
             "tile_file_mapping": "RelayGPIO16.py",
-            "is_active_tile": 1
+            "is_active_tile": 0
         },
         {
             "tile_id": "tile_7",
             "tile_name": "Reading Lights",
             "tile_icon": "reading_light.png",
             "tile_file_mapping": "RelayGPIO20.py",
-            "is_active_tile": 1
+            "is_active_tile": 0
         },
         {
             "tile_id": "tile_8",
